# DtEngine

./: CMakeLists.txt  README.md
Core/: ExecuteOrder.h
Core/Collections/: Collections.h  RbTree.c  Vec.c
Core/Components/: Components.c  DtTransform2D.c
Core/Ecs/: ComponentHandler.c  ComponentPool.c  DrawHandler.c  DtEcs.h  DtEcsManager.c  EcsPool.c  Entity.c  RegisterHandler.h  TagPool.c  UpdateHandler.c
Core/scheduler/: DtScheduler.h  Environment.c  LazyLoad.h  RuntimeScheduler.h  SceneLoader.c  TypeParse.c
CoreTest/: main_tests.c
CoreTest/TestModule/: TestHeader.h  TestSource.c
CoreTest/Tests/: TestCreateRemoveEntity.c  TestEcs.h  TestFilter.c  TestModuleLoad.c  TestParentChildrenRelations.c  TestPools.c  TestRegisterAll.c  TestSystemsRegister.c
Editor/: EditorApi.h  main_editor.c  raylib-nuklear.h
Editor/GameLibLink/: GameLib.h  GameLibLoader.c  GameSystemController.c
Editor/GameObjectInteract/: GameCamera.c
Editor/UI/: EntityComponentsPanel.c  Inspecor.c  Systems.c
Editor/source/: main menu.dt.scene
Game/source/scenes/: test_scene_1.dt.scene
GameScripts/: ColliderGrid.c  DeleteMe.c  DrawSpriteSystem.c  GameComponents.h  GameScripts.h  Sprite.c
builds/linux/editor/: Editor
cmake/targets/: core.cmake  editor.cmake  game.cmake
tutorial/: tutorial.md
